# django-fingerprint-rt

./: .cruft.json  .gitignore  CHANGELOG.md  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish.yml
changelog.d/: +cookiecutter.infrastructure.md  +missing_import.fixed.md  +user_session_referer.added.md  +utm_params.added.md
demo/demo/: admin.py  settings.py  urls.py  views.py
demo/demo/templates/demo/: home.html
demo/demo/tests/: conftest.py  test_models.py  test_utils.py  test_views.py
fingerprint/: admin.py  models.py  views.py
fingerprint/migrations/: 0001_initial.py  0002_url_browserfingerprint_fingerprint_url_id_9faee4_idx_and_more.py  0003_alter_browserfingerprint_url_and_more.py  0004_requestfingerprint_referer_country.py
fingerprint/static/: FingerprintJSv3.4.0.js
fingerprint/templates/: fingerprint.html
fingerprint/templates/fingerprint/: fingerprint.html
fingerprint/templates/fingerprint/include/: script.html
fingerprint/templatetags/: hit_count.py
src/fingerprint/: admin.py  fields.py  models.py  views.py
src/fingerprint/_internal/: __init__.py
src/fingerprint/migrations/: 0001_initial.py  0002_url_browserfingerprint_fingerprint_url_id_9faee4_idx_and_more.py  0003_alter_browserfingerprint_url_and_more.py  0004_requestfingerprint_referer_country.py  0005_user_session_utm_fields.py  0006_usersession_referer.py  0007_alter_url_value.py
src/fingerprint/templates/fingerprint/: fingerprint.html
src/fingerprint/v1/: __init__.py
tests/unit/internal/: test_setup.py
