[metadata]
name = django-fingerprint-rt
version = 0.0.2
author = Aleksandr Goncharov
author_email = aleksandr.goncharov@reef.pl
description = Users fingerprinting for your django app
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/reef-technologies/django-fingerprint-rt
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = fingerprint
python_requires = >=3.8
install_requires =
    django>=3.1
    django-ipware~=6.0.4
include_package_data = True

[options.package_data]
* = *.py, */*.py, */*/*.py, */*/*/*.py, *.html, */*.html, */*/*.html, */*/*/*.html, *.js, */*.js, */*/*.js, */*/*/*.js

[mypy]
plugins =
    mypy_django_plugin.main
strict_optional = True
ignore_missing_imports = True

[mypy.plugins.django-stubs]
django_settings_module = demo.demo.settings

[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning
DJANGO_SETTINGS_MODULE = demo.demo.settings
